Fix - Incosistent gapping in registration form fileds advanced options

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -3736,7 +3736,7 @@ a.button.ur-smart-tags-list-button {
 		.ur-tab-contents {
 			#ur-setting-form {
 				.ur-general-setting-block {
-					margin-bottom: $spacing_36px;
+					// margin-bottom: $spacing_36px;
 
 					&:has(.closed) {
 						margin-bottom: 0;
